--- a/vc.html
+++ b/vc.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <title>个人简历</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<m<meta name="viewport" content="width=device-width, initial-scale=1; text/html;charset=UTF-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
-<style>  
+<style>
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
   h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
   h2  { border-bottom:1px solid grey; padding:2px; COLOR:STEELBLUE }
@@ -13,11 +13,11 @@
 
 <!-- <img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" /> -->
 
-<span style="float:right;padding:6px;COLOR:WHITE"> 
+<span style="float:right;padding:6px;COLOR:WHITE">
   邮箱: z429213642@gmail.com <br> 联系方式: +86 17681330007 <br> 现居: 北京
 </span>
 
-# 个人简历  
+# 个人简历
 
 ## 技能清单
 
