--- a/vc.html
+++ b/vc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>个人简历</title>
-<m<meta name="viewport" content="width=device-width, initial-scale=1; text/html;charset=UTF-8">
+<m<meta name="viewport" http-equiv="Content-Type" content="width=device-width, initial-scale=1; text/html;charset=UTF-8">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>
