--- a/vc.html
+++ b/vc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>个人简历</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type"/>
+<meta name="Content-Type" content="text/html; charset=utf-8"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>
