--- a/vc.html
+++ b/vc.html
@@ -26,22 +26,62 @@
 * 前端: JavaScript,Vue3,Element Plus,Quasar
 * 工具: Docker,Git,Linux
 * IDE: VS Code,IDEA
-* 数据库: Mysql,MongoDB,Redis,sqlite
+* 数据库: Mysql,MongoDB,Redis
 
 ## 工作经验
 
-#### 现任公司（求臻医学）
+#### 现任公司(求臻医学)
 
 * 2021年9月-至今
 
-#### 第一家公司（正铭伦）
+#### 第一家公司(正铭伦)
 
 * 2021年3月-8月
 
 ## 项目
 
-* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
-* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
+* 开发环境: 
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;idea + Git + Mysql + JDK1.8 + Redis + VS code
+
+* 项目框架: 
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;后端的主要技术架构是: SpringBoot + SpringCloud + MyBatis Plus + Maven + MongoDB + Redis + Mysql
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前端端的主要技术架构是: vue3 + quasar + element plus + Echats
+
+
+### 报告系统(血液病报告系统、实体瘤报告系统)
+
+* 项目描述：
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项目主要是前后端分离项目,前端使用的vue(quasar UI组件库),后端采用的Springcloud这种分布式技术。项目中的数据字典这种偶尔会更新的模块都做了Redis缓存处理。项目中的报告数据使用MongoDB存储进行灵活的数据模型存储。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 权限管理模块、数据知识库模块、报告出具模块(报告数据导入、报告初审、报告终审、报告出具)、报告基础配置模块、报告预览模块、报告模板配置模块
+
+* 责任描述:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在项目中主要负责参与需求分析,业务评审,撰写需求文档,对数据字典的优化(Redis缓存)。主要做的是数据知识库模块、报告基础配置模块、报告模板配置模块、报告出具模块(MongoDB),后期主要对代码的Bug进行修改。
+
+### 可视化项目
+
+* 项目描述：
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项目主要是前后端分离项目,前端使用的Echarts,后端采用的Spring Boot。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 权限管理模块、报告数据统计模块(月度样本统计、检查项目分布统计、组织中肿瘤细胞含量占比、总体基因突变情况、癌肿分布)、筛选统计数据下载模块、地区分布统计模块
+
+* 责任描述:
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参与需求分析,以及总体设计和详细设计及数据库的设计,主要负责报告数据统计模块(MySQL视图统计)、筛选统计数据下载模块(poi)以及bug优化
+
+### EDC系统
+
+* 项目描述：
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项目主要是前后端分离项目,前端使用的vue(Element Plus UI组件库),后端采用的Spring Boot。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 权限管理模块、自定义项目添加模块、质疑添加及审核模块、随访提醒模块、医院及医生分配模块
+
+* 责任描述:
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我在该项目中主要负责担任页面的设计和后台部分代码编写,主要负责的模块 自定义项目添加模块(自定义了项目、表单、字段、下拉框、日期选择框 采用EAV模型)、质疑添加及审核模块、随访提醒模块(调用邮箱、企业微信接口进行消息推送)、医院及医生分配模块
 
 ## 教育经历
 
@@ -49,7 +89,6 @@
 
 ## 自我评价
 
-* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
-* 热爱编程，喜欢思考问题，能够查阅各种开发技术的中英文手册，具有独立解决问题的能力；有良好的开发习惯和设计思路。
+* 热爱编程,喜欢思考问题,能够查阅各种开发技术的中英文手册,具有独立解决问题的能力；有良好的开发习惯和设计思路。
 * 能够接受集体加班和长期出差
-* 性格沉稳，待人友好；诚实守信，讲原则，不推卸责任。
+* 性格沉稳,待人友好；诚实守信,讲原则,不推卸责任。
