--- a/vc.html
+++ b/vc.html
@@ -85,7 +85,7 @@
 
 ## 教育经历
 
-* 重庆科技学院&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本科
+* 大连工业大学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本科
 
 ## 自我评价
 
