fix:优化个人简历

--- a/vc.html
+++ b/vc.html
@@ -18,7 +18,7 @@
   邮箱: z429213642@gmail.com <br> 联系方式: +86 17681330007 <br> 现居: 北京
 </span>
 
-# 个人简历
+# 个人简历（周家乐）
 
 ## 技能清单
 
@@ -85,7 +85,7 @@
 
 ## 教育经历
 
-* 大连工业大学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本科
+* 大连工业大学（2017-09-02——2021-06-25）&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;计算机科学与技术&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本科
 
 ## 自我评价
 
