--- a/vc.html
+++ b/vc.html
@@ -30,9 +30,13 @@
 
 ## 工作经验
 
-#### 现任公司(求臻医学)
+#### 现任公司(中软国际)
 
-* 2021年9月-至今
+* 2024年11月-至今
+
+#### 第二家公司(求臻医学)
+
+* 2021年9月-2024年10月
 
 #### 第一家公司(正铭伦)
 
@@ -49,6 +53,28 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;后端的主要技术架构是: SpringBoot + SpringCloud + MyBatis Plus + Maven + MongoDB + Redis + Mysql
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前端端的主要技术架构是: vue3 + quasar + element plus + Echats
+
+
+### TASK工程
+
+* 项目描述：
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项目为单体项目,页面使用的JSP,后端使用Spring来写的。<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 工作注册模块、任务监控模块、日志模块(任务日志和工作日志)、任务注册模块、数据源配置模块。
+
+* 责任描述:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这个项目主要目标是对一个现有的老项目进行全面优化和完善。任务监控模块引入了应用双活机制、针对浏览器(Chrome和Firefox)进行了适配和优化工作、集成日志记录模块、完善初始化阶段定时任务的调度算法。
+
+### SAFE工程
+
+* 项目描述：
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;项目无前端,后端使用Spring<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 接收报文模块、报文打包模块、内外网互传模块、数据校验模块
+
+* 责任描述:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接收报文,将商务部传过来的数据进行打包,传到内网进行分析,并对数据进行验证,错误数据单独打包并返回给商务部,重新发送请求。
+
 
 
 ### 报告系统(血液病报告系统、实体瘤报告系统)
