feat:优化报告系统的业务描述

--- a/vc.html
+++ b/vc.html
@@ -85,7 +85,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业务模块主要涉及到: 权限管理模块、数据知识库模块、报告出具模块(报告数据导入、报告初审、报告终审、报告出具)、报告基础配置模块、报告预览模块、报告模板配置模块
 
 * 责任描述:
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在项目中主要负责参与需求分析,业务评审,撰写需求文档,对数据字典的优化(Redis缓存)。主要做的是数据知识库模块、报告基础配置模块、报告模板配置模块、报告出具模块(MongoDB),后期主要对代码的Bug进行修改。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在项目中,参与需求分析与业务评审,并负责撰写详尽的需求文档以及对数据字典进行优化,通过引入Redis缓存机制提高了查询效率。主要工作集中在开发和维护多个关键模块,包括数据知识库、报告基础配置、报告模板配置以及基于MongoDB的报告出具模块。通过各模块间的紧密联调,确保了数据流的顺畅。
 
 ### 可视化项目
 
